# ghostbusters

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ASTRAL_TOOLS.md  BASETEN_DEPLOYMENT.md  BASETEN_QUICKSTART.md  BASETEN_SETUP.md  BLOG_NOTES.md  CODEBASE_ANALYSIS.md  COSTUME_CLASSIFICATION.md  COSTUME_CLASSIFICATION_ARCHITECTURE.md  COSTUME_DETECTION_IMPROVEMENTS.md  DOCUMENTATION_INDEX.md  DOORBIRD_SETUP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MULTIPLE_PEOPLE_DESIGN.md  MULTIPLE_PEOPLE_IMPLEMENTATION.md  MVP_PLAN.md  PLANNING.md  PROJECT_SPEC.md  QUICK_START_COSTUME_CLASSIFIER.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_TEST_CHECKLIST.md  STANDARD_PRACTICES_APPLIED.md  STRUCTURE_DIAGRAM.md  SUPABASE_QUICKSTART.md  SUPABASE_SETUP.md  SYSTEM_ARCHITECTURE.md  TEST_PLAN.md  baseten_client.py  blog-post.md  check_model_status.py  classify_costume.py  classify_costume_api.py  classify_costumes.py  costume-detector.service  costume_classifier.py  (+27 more)
.github/workflows/: ci.yml
backend/: README.md  __init__.py  pyproject.toml
backend/migrations/: supabase_migration.sql
backend/scripts/: main.py  test_face_blur.py
backend/src/: __init__.py  config.py  costume_detector.py  main.py
backend/src/clients/: baseten_client.py  supabase_client.py
backend/src/detection/: __init__.py  person_detector.py
backend/src/storage/: __init__.py  supabase_client.py
backend/src/utils/: face_blur.py
backend/tests/: __init__.py  test_costume_detection.py  test_supabase.py
backend/tests/fixtures/: README.md
backend/tests/integration/: test_baseten_connection.py  test_costume_detection.py  test_face_blur.py  test_multiple_people.py  test_nonhuman_costume.py  test_supabase_connection.py
dashboard/: .env.example  README.md  SETUP.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/dashboard/: activity-timeline.tsx  confidence-meter.tsx  costume-distribution.tsx  dashboard-client.tsx  live-feed.tsx  stats-card.tsx
dashboard/components/ui/: animated-number.tsx
dashboard/lib/: string-utils.ts  supabase.ts
docs/: BASETEN_CHECKLIST.md  BASETEN_DEPLOYMENT.md  BASETEN_SETUP.md  BASETEN_SUMMARY.md  BLOG_NOTES.md  FACE_BLURRING.md  IMPLEMENTATION_NOTES.md  PROJECT_SPEC.md  QUICK_REFERENCE.md  README.md  REFACTOR_TEST_CHECKLIST.md  architecture.md
docs/setup/: backend.md
frontend/: next.config.js  tailwind.config.js
frontend/app/: globals.css  layout.tsx
frontend/components/dashboard/: about.tsx  activity-timeline.tsx  confidence-meter.tsx  dashboard-client.tsx  live-feed.tsx  photo-gallery.tsx  stats-card.tsx
frontend/lib/: string-utils.ts
supabase/: README.md  seed.sql
supabase/migrations/: 001_create_sightings_table.sql
test_images/: README.md
tests/integration/: test_costume_detection.py  test_multiple_people.py
truss_costume_classifier/: README.md  config.yaml
truss_costume_classifier/model/: __init__.py  model.py
(+2 files in other folders)
