[project]
name = "costume-classifier"
version = "0.1.0"
description = "Doorstep costume classifier using DoorBird camera"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
