# ============================================================================
# Doorstep Costume Classifier - Root Configuration
# ============================================================================
# This is a workspace configuration that points to the backend package.
# The actual Python dependencies and configuration are in backend/pyproject.toml
#
# For development:
#   cd backend/
#   uv sync
#   uv run python -m backend.src.detection.person_detector

[project]
name = "costume-classifier"
version = "0.1.0"
description = "Doorstep costume classifier - Raspberry Pi edge computer vision system for Halloween"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alana Goyal"}
]

# This root package has no dependencies
# All Python dependencies are in backend/pyproject.toml
dependencies = []

[tool.uv.workspace]
members = ["backend"]

[tool.ruff]
# Global ruff configuration for the entire project
line-length = 88
target-version = "py310"

lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

lint.fixable = ["ALL"]

extend-exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "dashboard/",
    "docs/",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
